syntax = "proto3";

package model;

message ProviderCredentials {
    string public_key = 1;
    string private_key = 2;
  }